[package]
authors = ["Mangata team"]
edition = "2018"
name = "pallet-proof-of-stake"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
hex-literal = { version = "0.3.3", default-features = false }
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.126", optional = true }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }

pallet-bootstrap = { default-features = false, path = "../bootstrap" }
pallet-issuance = { default-features = false, path = "../issuance" }

libm = { git = "https://github.com/rust-lang/libm", rev = "2f3fc968f43d345f9b449938d050a9ea46a04c83", default-features = false }

frame-benchmarking = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-executive = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-try-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false, optional = true }
mangata-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
mangata-types = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-arithmetic = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

orml-tokens = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }

[dev-dependencies]
env_logger = "0.10.1"
lazy_static = "1.1.1"
serial_test = { version = "0.6.0", default-features = false }
similar-asserts = "1.1.0"
test-case = "2.0.2"
mockall = "0.11.0"
pallet-xyk = { path = "../xyk" }

sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

orml-traits = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"hex/std",
	"log/std",
	"mangata-support/std",
	"mangata-types/std",
	"orml-tokens/std",
	"pallet-bootstrap/std",
	"pallet-issuance/std",
	"pallet-vesting-mangata/std",
	"scale-info/std",
	"serde",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"mangata-support/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-bootstrap/runtime-benchmarks",
	"pallet-issuance/runtime-benchmarks",
	"pallet-vesting-mangata/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"orml-tokens/try-runtime",
	"pallet-bootstrap/try-runtime",
	"pallet-issuance/try-runtime",
	"pallet-vesting-mangata/try-runtime",
	"sp-runtime/try-runtime",
]
