[package]
authors = ["Mangata team"]
edition = "2018"
name = "pallet-proof-of-stake"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
hex-literal = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

pallet-bootstrap = { default-features = false, path = "../bootstrap" }
pallet-issuance = { default-features = false, path = "../issuance" }

libm = { git = "https://github.com/rust-lang/libm", rev = "2f3fc968f43d345f9b449938d050a9ea46a04c83", default-features = false }

frame-benchmarking = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
mangata-support = { workspace = true, default-features = false }
mangata-types = { workspace = true, default-features = false }
pallet-vesting-mangata = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

orml-tokens = { workspace = true, default-features = false }

[dev-dependencies]
env_logger.workspace = true
lazy_static.workspace = true
serial_test.workspace = true
similar-asserts.workspace = true
test-case.workspace = true
mockall.workspace = true

pallet-xyk = { path = "../xyk" }

sp-io = { workspace = true, default-features = false }

orml-traits = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"hex/std",
	"log/std",
	"mangata-support/std",
	"mangata-types/std",
	"orml-tokens/std",
	"pallet-bootstrap/std",
	"pallet-issuance/std",
	"pallet-vesting-mangata/std",
	"scale-info/std",
	"serde",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"mangata-support/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-bootstrap/runtime-benchmarks",
	"pallet-issuance/runtime-benchmarks",
	"pallet-vesting-mangata/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"orml-tokens/try-runtime",
	"pallet-bootstrap/try-runtime",
	"pallet-issuance/try-runtime",
	"pallet-vesting-mangata/try-runtime",
	"sp-runtime/try-runtime",
]
