[package]
authors = ["Mangata team"]
edition = "2018"
name = "pallet-rolldown"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
alloy-sol-types = { version = "0.5.0", default-features = false }
alloy-primitives = { version = "0.5.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.3.3", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = {version = "1.0.101",default-features = false, features = ["derive"]  }
serde_json = { version = "1.0.108", default-features = false }
# serde-json-wasm = { version =  "1.0.0", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
array-bytes = "6.1"


frame-benchmarking = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
mangata-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
mangata-types = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false}
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false}
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

orml-tokens = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"
lazy_static = "1.1.1"
serial_test = { version = "0.6.0", default-features = false }

sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

orml-traits = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }


[features]
default = ["std"]
enable-trading = []
std = [
	"alloy-sol-types/std",
	"alloy-primitives/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"mangata-support/std",
	"orml-tokens/std",
	"serde/std",
	"serde_json/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]

try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "orml-tokens/try-runtime", "sp-runtime/try-runtime"]
