[package]
authors = ["Mangata team"]
edition = "2018"
name = "pallet-rolldown"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
alloy-sol-types = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
hex-literal = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
array-bytes.workspace = true
itertools = { workspace = true, default-features = false }
rs_merkle = { version = "1.4.2", default-features = false }

frame-benchmarking = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
mangata-support = { workspace = true, default-features = false }
mangata-types = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-crypto-hashing = { workspace = true, default-features = false }

orml-tokens = { workspace = true, default-features = false }

[dev-dependencies]
env_logger.workspace = true
lazy_static.workspace = true
serial_test.workspace = true
mockall.workspace = true

sp-io = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }


[features]
default = ["std"]
enable-trading = []
std = [
	"alloy-sol-types/std",
	"alloy-primitives/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"mangata-support/std",
	"orml-tokens/std",
	"rs_merkle/std",
	"serde/std",
	"serde_json/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]

try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "orml-tokens/try-runtime", "sp-runtime/try-runtime"]
