[package]
authors = ["Mangata team"]
edition = "2018"
name = "pallet-sequencer-staking"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
hex-literal = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

frame-benchmarking = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
mangata-support = { workspace = true, default-features = false }
mangata-types = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

orml-tokens = { workspace = true, default-features = false }

[dev-dependencies]
env_logger.workspace = true
lazy_static.workspace = true
serial_test.workspace = true
mockall.workspace = true

sp-io = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }

pallet-issuance = { path = "../issuance", default-features = false }

[features]
default = ["std"]
enable-trading = []
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"mangata-support/std",
	"mangata-types/std",
	"orml-tokens/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"scale-info/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "orml-tokens/try-runtime", "sp-runtime/try-runtime"]
