[package]
name = "pallet-stable-swap"
description = "A pallet providing stable swaps."
version = "1.0.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

frame-benchmarking = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
mangata-support = { workspace = true, default-features = false }
mangata-types = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

orml-traits = { workspace = true, default-features = false }
orml-tokens = { workspace = true, default-features = false }

[dev-dependencies]
primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "num-traits", "scale-info"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"mangata-support/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-tokens/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"orml-tokens/try-runtime",
]
