[package]
name = "pallet-sudo-origin"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/mangata-finance/mangata-node/"
description = "FRAME pallet for sudo"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.20", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-executive = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
frame-try-runtime = { git = "https://github.com/mangata-finance/substrate", default-features = false, optional = true , branch = "mangata-dev" }

[dev-dependencies]
sp-core = { version = "7.0.0", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime"
]
