[package]
name = "pallet-sudo-origin"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/mangata-finance/mangata-node/"
description = "FRAME pallet for sudo"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.21", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-executive = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-try-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false, optional = true }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"sp-runtime/try-runtime",
]
